CNCF/OrchestrationManagement/SchedulingOrchestration/Kubernetes/resource-manifest/others/rocketmq-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketmq-exporter
  namespace: monitoring
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rocketmq-exporter
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rocketmq-exporter
      namespace: monitoring
    spec:
      containers:
        - args:
            - "--rocketmq.config.namesrvAddr=rocketmq-nameserver.middleware.svc:9876"
            - "--rocketmq.config.rocketmqVersion=V5_3_0"
          image: apache/rocketmq-exporter:v0.0.2-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: rocketmq-exporter
          ports:
            - containerPort: 5557
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    app: rocketmq-exporter
  name: rocketmq-exporter
  namespace: monitoring
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: port-5557
      port: 5557
      protocol: TCP
      targetPort: 5557
  selector:
    app: rocketmq-exporter
  sessionAffinity: None
  type: ClusterIP
